# Emulgator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
backup/: sfguil.cpp  sfguil.hpp  ui.cpp  ui.hpp
include/: SHARP_LR35902.hpp  apu.hpp  emulator.hpp  input.hpp  memory.hpp  ppu.hpp  sfguil.hpp  timing.hpp  ui.hpp
resources/: links.txt
src/: SHARP_LR35902.cpp  apu.cpp  emulator.cpp  input.cpp  memory.cpp  ppu.cpp  sfguil.cpp  timing.cpp  ui.cpp
